<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_700"
    android:onClick="onRegister"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"

        app:layout_constraintBottom_toBottomOf="@+id/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toEndOf="@+id/google"
        app:layout_constraintTop_toTopOf="@+id/google"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"

        app:layout_constraintBottom_toBottomOf="@+id/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/google"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.252" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="4dp"

        app:layout_constraintBottom_toBottomOf="@+id/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/google"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="63dp"
        android:layout_height="57dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/grey_200"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/password"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_200"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.104"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_200"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:background="@color/grey_200"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.064"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="182dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@mipmap/logo_100_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>